fixed author placement, know should be aligned to the right for all screen sizes

--- a/styles.css
+++ b/styles.css
@@ -125,9 +125,11 @@ img {
     font-weight: lighter;
 }
 .quoteSection .author{
-    margin: 10px 220px 60px 550px;
     font-weight: bold;
-}
+    text-align: right;
+    margin: 10px 220px 60px 0px;
+
+ }
 
 .container3 {
     background-color: #6366f1;
